fix: announcement service tests